--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "rollup -c \"rollup_config.js\"",
-    "start": "rollup -c ./rollup_config.js --watch"
+    "start": "rollup -c ./rollup_config.js --watch",
+    "dev": "rollup -c ./rollup_config.js"
   },
   "author": "Mugen87",
   "license": "MIT",
